styles.css
/*
	Note: Margin with a capital M due to Outlook lack of support for lowercase margin
	Both margins and paddings are not guarenteed to be the same by default, so we need to reset
*/
/*=================START OF CSS RESET===================*/
body {
	Margin: 0;
	padding: 0;
	min-width: 100%;
	background-color: #ffffff;
}

table {
	border-spacing: 0;
	font-family: sans-serif;
	color: #333333;
	border-collapse: collapse;
}

td {
	padding: 0;
}

img {
	border: 0;
}

p {
	Margin: 0;
	font-size: 14px;
	color: #555555;
}

a {
	color: #ee6a56;
	text-decoration: underline;
}

/*=================END OF CSS RESET===================*/
.bottom-line {
	border-bottom: 1px solid #888;
}

.wrapper {
	width: 100%;
	table-layout: fixed;
	-webkit-text-size-adjust: 100%;
	-ms-text-size-adjust: 100%;
}

.webkit {
	max-width: 600px;
}

.outer {
	Margin: 0 auto;
	width: 100%;
	max-width: 600px;
}

.full-width-image img {
	width: 100%;
	max-width: 600px;
	height: auto;
}

.inner {
	padding: 10px;
}

/**
* @tab Body
* @section heading 1
* @tip Set the styling for all first-level headings in your emails.
* @style heading 1
*/
.h1 {
	/*@editable*/font-family: Arial;
	/*@editable*/font-size: 20px;
	/*@editable*/font-weight: bold;

	/*@editable*/color:#222222;
	/*@editable*/text-align: left;
	/*@editable*/line-height: 100%;
	Margin-bottom: 12px;
}

/**
* @tab Body
* @section heading 2
* @tip Set the styling for all second-level headings in your emails.
* @style heading 2
*/
.h2 {
	/*@editable*/font-family: Arial;
	/*@editable*/font-size: 18px;
	/*@editable*/font-weight: bold;

	/*@editable*/color:#222222;
	/*@editable*/text-align: center;
	/*@editable*/line-height: 100%;
	Margin-bottom: 8px;
}


.contents {
	width: 100%;
}

.ncolumn{
	text-align: center;
	font-size: 0;
}
	.ncolumn img {
		width: 100%;
		height: auto;
	}

	.ncolumn .text {
		padding-top: 10px;`
	}

	.ncolumn .contents{
		font-size: 14px;
		text-align: left;
	}

	.ncolumn .column{
		width: 100%;
		display: inline-block;
		vertical-align: top;
	} 


#title-banner p{
	text-align: center;
	font-family: "Times New Romen";
}


/* One column layout */
.one p {
	Margin-bottom: 10px;
}

/*Two column layout*/
.two .column {
	max-width: 300px;
}

.two img {
	max-width: 280px;
}


/*Three column layout*/
.three {
	padding-top: 10px;
	padding-bottom: 10px;
}
	.three .column {
		max-width: 200px;
	}

	.three .contents {
		text-align: center;
	}

	.three img {
		max-width: 180px;
	}



/* Sidebar layout */
.sidebar {
	text-align: center;
	font-size: 0;
}

	.sidebar .column {
		width: 100%;
		display: inline-block;
		vertical-align: middle;
	}

	.sidebar .left {
		max-width: 100px;
	}

	.sidebar .right {
		max-width: 500px;
	}

	.sidebar .img {
		width: 100%;
		max-width: 80px;
		height: 100%;
	}

	.sidebar .contents {
		font-size: 14px;
		text-align: left;
	}

	.sidebar a {
		color: #85ab70;
	}


#footer p{
	font-size: 10px;
	text-align: center;
	Margin-top: 10px;
}

.light-green{
	background-color: #46732E;
	border-top: 2px solid #88B272;
	border-bottom: 2px solid #88B272;
}

	.light-green img{
		border: 1px solid #D5E6CC;
	}

	.light-green .text, .light-green p{
		color: #D5E6CC;
	}

